# EmbeddedTeam

./: README.md
courses/examples/: Examples.atsln
courses/examples/CMSIS/CMSIS/Documentation/Driver/html/: _driver___common_8c.html  _driver___common_8h.html  _driver___e_t_h_8c.html  _driver___e_t_h_8h.html  _driver___e_t_h___m_a_c_8c.html  _driver___e_t_h___m_a_c_8h.html  _driver___e_t_h___p_h_y_8c.html  _driver___e_t_h___p_h_y_8h.html  _driver___flash_8c.html  _driver___flash_8h.html  _driver___i2_c_8c.html  _driver___i2_c_8h.html  _driver___m_c_i_8c.html  files.html  (+163 more)
courses/examples/CMSIS/Device/ATMEL/: samc.h  samg.h  samh.h  samv.h
courses/examples/ex1_basic_led/: CMakeLists.txt  Makefile  ex1_basic_led.c  ex1_basic_led.cproj  ex1_basic_led.mk  ex1_basic_led.project  startup_sam4s.c
courses/examples/ex2_basic_button/: Makefile  ex2_basic_button.c  ex2_basic_button.cproj  sam4s_xplained_LAB.ld
courses/examples/ex3_advanced_button/: Makefile  ex3_advanced_button.c  ex3_advanced_button.cproj  jlink.config  system_sam4s.c
courses/examples/ex4_led_blink/: Makefile  ex4_led_blink.c  ex4_led_blink.cproj  startup_sam4s.c  system_sam4s.c  system_sam4s.h
courses/examples/resources/openocd/: atmel_sam4s_xplained.cfg
documentation/: README.md
documentation/SAM4S-XPLD/: Readme.md  SAM4S-XPLD__KitsFiles_readme.txt
how-to/: README.md  how-to contribute to mbed.odp  private_settings.py
how-tos/: README.md  how-to contribute to mbed.odp
projects tracking/: mbed_sam4s_xpld_progress.ods
trainings/: README.md
trainings/Technical - SAMA5D3-Xplained/: README.md
(+508 files in other folders)
